--- a/client/src/pages/OrderHistory/index.scss
+++ b/client/src/pages/OrderHistory/index.scss
@@ -6,7 +6,7 @@ html, body, #root {
 .admin-order-history {
 [id ^= order-detail-] {
   border: 1px solid black;
-  :hover {
+  button:hover {
     cursor: pointer;
   }
   .display-item {
