--- a/client/src/pages/userLogin/userLogInStyle.scss
+++ b/client/src/pages/userLogin/userLogInStyle.scss
@@ -14,8 +14,9 @@
 * {
     font-family: "Lato", "Helvetica Neue", "Helvetica", "Arial", fontawesome;
     line-height: 1.4;
+
     body {
-        // background: url("../../../../images/Toonies-Vi-Ga-BBQ.png") no-repeat center center fixed;
+        background: url("../../assets/images/background.png") no-repeat center center fixed;
         height: 100%;
         overflow: hidden;
         -webkit-background-size: cover;
@@ -24,6 +25,7 @@
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
+
         .main-content {
             position: relative;
             display: block;
@@ -33,93 +35,87 @@
             height: 100%;
             margin: auto;
         }
+
+        .container {
+            border-radius: 20px;
+            height: auto;
+            margin-top: 15px;
+            text-align: center;
+            background-color: #E9EBEE;
+            background: url("https://www.xmple.com/wallpaper/linear-highlight-yellow-green-gradient-1920x1080-c2-fffdc7-c7ffcd-l-50-a-135-f-21.svg");
+            padding-bottom: 5px;
+    
+            h1 {
+                border-radius: 4px;
+                background: white;
+                border: hidden;
+            }
+        }
     } 
 }
-// .main-content {
-//     position: relative;
-//     display: block;
-//     top: 2%;
-//     width: 200% - 100%;
-//     max-width: 360px;
-//     height: 100%;
-//     margin: auto;
-// }
-// .container, h1 {
-//     border-radius: 4px;
-//     background: white;
-//     border: hidden;
-// }
-// .container {
-//     border-radius: 20px;
-//     height: auto;
-//     margin-top: 15px;
-//     text-align: center;
-//     background-color: #E9EBEE;
-//     background: url("https://www.xmple.com/wallpaper/linear-highlight-yellow-green-gradient-1920x1080-c2-fffdc7-c7ffcd-l-50-a-135-f-21.svg");
-//     padding-bottom: 5px;
-// }
-// h3 {
-//     text-align: left;
-//     padding: 0px 20px;
-//     padding-top: 20px;
-//     margin: 0;
-// }
-// h4 {
-//     padding: 0;
-//     margin: 15px auto;
-//     font-size: 14px;
-//     text-align: center;
-// }
-// input[type=text], input[type=password] {
-//     border-radius: 10px;
-//     position: relative;
-//     width: 92%;
-//     padding: 12px 20px;
-//     margin: 5px 15px 0px 15px;
-//     display: inline-block;
-//     border: none;
-//     background: white;
-// }
-// input[type=text]:focus, input[type=password]:focus {
-//     background-color: white;
-//     outline: none;
-//     position: relative;
-//     padding: 12px 20px;
-// }
-// button {
-//     background-color: #ffe36a;
-//     color: black;
-//     padding: 5px 20px;
-//     width: 100px;
-//     margin-top: 20px;
-//     margin-bottom: 5px;
-//     border: none;
-//     border-radius: 8px;
-//     cursor: pointer;
-//     font-size: 18px;
-//     font-weight: bold;
-//     opacity: 0.9;
-// }
-// button:hover {
-//     filter: brightness(105%);
-// }
-// #redirect-login {
-//     padding-top: 0;
-// }
-// #link-signup {
-//     text-decoration: none;
-// }
-// .logo {
-//     width: 100%;
-//     height: auto;
-//     margin: auto;
-//     margin-top: 15px;
-// }
-// .logo-container {
-//     width: 100%;
-// }
-// @media  (min-width: 576px) {
-//     br {
-//         display: none;
-//     }
-// }
+
+h3 {
+    text-align: left;
+    padding: 0px 20px;
+    padding-top: 20px;
+    margin: 0;
+}
+h4 {
+    padding: 0;
+    margin: 15px auto;
+    font-size: 14px;
+    text-align: center;
+}
+input[type=text], input[type=password] {
+    border-radius: 10px;
+    position: relative;
+    width: 92%;
+    padding: 12px 20px;
+    margin: 5px 15px 0px 15px;
+    display: inline-block;
+    border: none;
+    background: white;
+}
+input[type=text]:focus, input[type=password]:focus {
+    background-color: white;
+    outline: none;
+    position: relative;
+    padding: 12px 20px;
+}
+button {
+    background-color: #ffe36a;
+    color: black;
+    padding: 5px 20px;
+    width: 100px;
+    margin-top: 20px;
+    margin-bottom: 5px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 18px;
+    font-weight: bold;
+    opacity: 0.9;
+}
+button:hover {
+    filter: brightness(105%);
+}
+#redirect-login {
+    padding-top: 0;
+}
+#link-signup {
+    text-decoration: none;
+}
+.logo {
+    width: 100%;
+    height: auto;
+    margin: auto;
+    margin-top: 15px;
+}
+.logo-container {
+    width: 100%;
+}
+@media  (min-width: 576px) {
+    br {
+        display: none;
+    }
+}
