--- a/client/src/components/Home/css/order.css
+++ b/client/src/components/Home/css/order.css
@@ -1,10 +1,12 @@
-html {
-    background-color: #fff8e1 !important ;
-}
+
 .home {
     /* box-sizing: border-box; */
+    top: 70px;
     background-color: #fff8e1 ;
     font-family: Arial, Helvetica, sans-serif;
+    height: auto;
+    position: absolute;
+    width: 100%;
 }
 .home i {
     color: orange;
@@ -72,16 +74,18 @@ html {
 }
 .home .container {
     z-index: 1;
+    background-color: #fff8e1 ;
     display: block;
     position: relative;
-    top: 70px;
     margin-right: auto;
     margin-left: auto;
     padding-right: 15px;
     padding-left: 15px;
     width: 100%;
     height: auto;
+    padding-top: 36px;
 }
+
 .home .row {
     display: inline;
 }
@@ -153,9 +157,9 @@ html {
         width: 270px;
         border-radius: 150px;
     }
-    .home .container {
-        top: 106px;
-    }
+    /* .home .container {
+        padding-top: 106px;
+    } */
 }
 @media (max-width:1199.98px) {
     .home #user-bar {
