--- a/client/src/components/Home/css/order.css
+++ b/client/src/components/Home/css/order.css
@@ -20,7 +20,7 @@
     left: 0;
     right: 0;
     width: 100%;    
-    height: 64px;
+    height: 70px;
     border-bottom: 1px solid rgb(252, 193, 0);
     background-color: #ffd54f;
     align-items: center;
@@ -51,6 +51,19 @@
     padding: 9px;
     max-width: 300px;
 }
+.home .side-part { 
+    z-index: 10;
+}
+.home .blank-part { 
+    top: 0;
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    z-index: 3;
+}
+
 .home #user-name {
     float: left;
     color: #ffa31a;
@@ -121,7 +134,7 @@
     z-index: 3;
     position: fixed;
     padding: 0;
-    top: 64px;
+    top: 70px;
     left: 0;
     background: #ffd54f;
     height: 100%;
