Add pagination for product list

--- a/client/src/pages/admin.addUser/create-user.scss
+++ b/client/src/pages/admin.addUser/create-user.scss
@@ -11,7 +11,7 @@ html, body, #root {
 }
 
 .admin-products {
-  height: auto;
+  height: 100%;
 }
 
 .admin-product-div {
@@ -57,4 +57,8 @@ html, body, #root {
   div {
     padding: 7px 0px;
   }
+}
+
+.table-responsive {
+  min-height: 600px;
 }
