--- a/client/src/components/NavBarAdmin/style.scss
+++ b/client/src/components/NavBarAdmin/style.scss
@@ -1,5 +1,12 @@
-.logo {
-    width: auto;
-    height: 60px;
-    margin-left: 30px;
+.admin-nav-bar{
+    height: 70px;
+    margin-top: 10px;
+    .logo {
+        width: auto;
+        height: 65px;
+        margin-left: 30px;
+    }
+    .nav-item{
+        margin-top: 5px;
+    }
 }
