--- a/client/src/components/Profile/css/profile.scss
+++ b/client/src/components/Profile/css/profile.scss
@@ -9,7 +9,7 @@
     bottom: 0;
     width: 100%;
     height:100%;
-    background: url("http://127.0.1:3000/static/images/background.png") no-repeat center center fixed;
+    background: url('../../../assets/images/background.png') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -61,7 +61,7 @@
     padding-right: 15px;
     padding-left: 15px;
     width: 100%;
-    height: 100%-70px;
+    height: calc(100%-70px);
 }
 
 .profile .profile-sidebar {
