--- a/client/src/pages/Login/styles.scss
+++ b/client/src/pages/Login/styles.scss
@@ -1,5 +1,5 @@
 .user-login {
-  background:	url("http://127.0.1:3000/static/images/background.png") no-repeat center center fixed;
+  background:	url("../../assets/images/background.png") no-repeat center center fixed;
   height: 100vh;
   width:100%;
   overflow: hidden;
