--- a/client/src/components/Profile/css/profile.css
+++ b/client/src/components/Profile/css/profile.css
@@ -159,12 +159,17 @@
 
 .profile .info-bar {
     display: block;
-    min-height: 35px;
-    margin-bottom: 5px;
+    margin-bottom: 5px; 
+}
+
+.profile .error-bar {
+    display: block;
+    margin-bottom: 5px; 
 }
 
 .profile .property {
     display: inline-block;
+    box-sizing: border-box;
     max-width: 100%;
     font-weight: 700;
     text-align: right;
@@ -175,6 +180,13 @@
     cursor: text;
     background: white;
     padding: 6px 12px;
+}
+
+.profile .alert {
+    padding: 3px;
+    margin-bottom: 3px;
+    border: 1px solid transparent;
+    border-radius: 4px;
 }
 
 .profile .input-field:disabled{
@@ -202,12 +214,6 @@
 @media (min-width: 576px) {
     .profile .profile-menu {
         text-align: center;
-    }
-}
-
-@media (min-width: 768px) {
-    .profile .profile-content {
-        height: 65%;
     }
 }
 
