--- a/client/src/components/Home/css/billstyle.scss
+++ b/client/src/components/Home/css/billstyle.scss
@@ -1,13 +1,10 @@
 .home {
     #bill-form {
         display: inline-block;
-        height: auto;
-        max-height: 90%;
         position: fixed;
         vertical-align: baseline;
         z-index: 1;
         padding: 10px;
-        padding-bottom: 0;
         border: 1px solid #ffe36a;
         background-color: white;
     }
@@ -21,8 +18,10 @@
     }
     #bill-form h1 {
         text-align: center;
+        font-weight: 700;
         margin: 0;
         padding: 10px;
+        text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
         background: #ffd54f;
         border: 2px solid orange;
         border-bottom: 5px double orange;
@@ -45,13 +44,20 @@
         color: red;
     }
     .number-of-snack {
+        border: 1px solid #e6e6e6;
         display: flex;
         position: relative;
         float: right;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        width: 80px;
+        margin-bottom: 5px;
+        border-radius: 3px;
     }
     .total {
         padding:  0 10px;
         width: 100%;
+        border-top: 1px dashed black; 
     }
     #total-price {
         font-size: 20px;
@@ -69,26 +75,33 @@
         float: right;
     }
     #order-button {
+        width: 100%;
         display: block;
-        margin: auto;  
-        background-color: #ffe36a;
-        font-size: 20px;
-        padding: 5px 15px;
-        margin-bottom: 15px;
-        font-weight: bold;
-        border-radius: 10px;
-        border: 0;
-        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+        text-align: center;
+        line-height: 36px;
+        color: #fef4e9;
+        border: solid 1px #da7c0c;
+        background: #f78d1d;
+        background: -webkit-gradient(linear, left top, left bottom, from(#faa51a), to(#f47a20));
+        font-size: 16px;
+        font-weight: 900;
+        border-radius: 5px;
+        text-shadow: 0 1px 1px rgba(0,0,0,.3);
+        box-shadow: 0 1px 2px rgba(0,0,0,.2);
         cursor: pointer;
     }
     #order-button:hover {
         filter: brightness(105%);
     }
     .number-button {
-        display: inline-block;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 10px;
-        padding: 5px 10px;
+        display: block;
+        text-align: center;
+        width: 24px;
+        height: 24px;
+        border: none;
+        background: transparent;
+        line-height: 24px;
+        font-size: .75rem;
     }
     .number-button:disabled {
         background: rgba(158, 158, 158, 0.3);
@@ -98,6 +111,9 @@
     }
     .number-button {
         cursor: pointer;
+    }
+    .amount-display {
+        padding: 3px;
     }
     @media  (max-width: 767.98px) {
         #bill-form {
