--- a/client/src/pages/admin.Login/styles.scss
+++ b/client/src/pages/admin.Login/styles.scss
@@ -41,6 +41,9 @@
         padding: 0px 20px;
         padding-top: 20px;
     }
+    #password-login-label {
+        padding-top: 5px;
+    }
     .login-button {
         text-align: center;
         font-size: 16px;
@@ -56,7 +59,7 @@
         color: black;
         padding: 5px 20px;
         width: 100px;
-        margin-top: 20px;
+        margin-top: 5px;
         margin-bottom: 5px;
         border: none;
         border-radius: 8px;
