Fix UI for Main order and Profile page
- Fix bug tên sản phẩm dài quá nên chiếm chỗ hàng dưới ở trang Main order
- Fix lỗi logo ở trang profile và change password

--- a/client/src/components/Home/css/items.css
+++ b/client/src/components/Home/css/items.css
@@ -18,6 +18,7 @@
     font-weight: 700;
     margin-top: 10px;
     min-height: 68px;
+    text-overflow: ellipsis;
 }
 .home .main-snack-price {
     color: red;
