--- a/client/src/pages/Login/styles.scss
+++ b/client/src/pages/Login/styles.scss
@@ -86,6 +86,10 @@
   .logo-container {
       width: 100%;
   }
+  .forget-password-dir {
+    text-align: center;
+    margin: 10px 0px;
+  }
 }
 @media  (min-width: 576px) {
   .Admin-login br {
