adjust position of logo

--- a/client/src/components/NavBarPayment/style.scss
+++ b/client/src/components/NavBarPayment/style.scss
@@ -25,6 +25,7 @@
     padding: 3px;
     border-radius: 100px;
     background: #fff8e1;
+    width: 235px;
   }
   .checkout-logo img {
     align-content: center;
@@ -40,4 +41,4 @@
       padding: 24px 4px;
     }
   }
-  }
+}
